# web

./: Cargo.toml  Makefile  README.md
public/: index.scss
static/: index.html
